# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: my-check.yml
gendiff/: __init__.py  gen_diff.py  get_diff.py  parser.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  parser.py
gendiff/tests/: test_generate_diff.py
gendiff/tests/fixtures/: file2.json  output.txt
tests/: test_generate_diff.py
tests/fixtures/: nested_diff_json_format.txt  plain1.yml  plain2.yml
