[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Gendiff is a program that determines the difference between two data structures. Utility Features: Support for different input formats: yaml, json.  Generating a report in the form of plain text, stylish and json"
authors = ["alex-j-fox <alex-j-fox@yandex.ru>"]
readme = "README.md"
packages = [{include = "gendiff"}]
repository = "https://github.com/alex-j-fox/python-project-50"
classifiers = [
    "Environment :: Console",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10.12",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment"
]

[tool.poetry.dependencies]
python = "^3.10.12"
pyyaml = "^6.0.1"
argcomplete = "^3.2.1"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
